--- a/2022_2_14_STL.md
+++ b/2022_2_14_STL.md
@@ -110,9 +110,41 @@ rfind从后面找
 
 c_str
 
+to_string
+
+reverse(s.begin(),s.end())
 
 
 
+模板多用引用 传值拷贝效率不高
 
 
+
+深浅拷贝概念
+
+重载要求在同一个作用域
+
+
+
+自己实现string  
+
+append不能简单扩2倍
+
+swap交换成员变量和临时变量 函数结束后临时变量被销毁  而成员变量的值已经改变了（巧法）
+
+
+
+由于编码原因写成了模板
+
+
+
+capacity不包含/0
+
+
+
+普通数组可能检查不出越界读
+
+但是string越界读和越界写都会被检查出来
+
+因为使用[]是调用一个函数  函数里就有对边界的检查
 
