--- a/2022_2_14_STL.md
+++ b/2022_2_14_STL.md
@@ -148,3 +148,12 @@ capacity不包含/0
 
 因为使用[]是调用一个函数  函数里就有对边界的检查
 
+
+
+resize会发生截断
+
+[(1条消息) 在C++拷贝构造函数中使用初始化列表_justin12zhu的专栏-CSDN博客](https://blog.csdn.net/justin12zhu/article/details/9174491)
+
+**发现拷贝构造的过程中调用了一次自动的初始化**
+
+![image-20220222231406186](https://pic-1304888003.cos.ap-guangzhou.myqcloud.com/img/image-20220222231406186.png)
