--- a/2022_2_14_STL.md
+++ b/2022_2_14_STL.md
@@ -157,3 +157,49 @@ resize会发生截断
 **发现拷贝构造的过程中调用了一次自动的初始化**
 
 ![image-20220222231406186](https://pic-1304888003.cos.ap-guangzhou.myqcloud.com/img/image-20220222231406186.png)
+
+
+
+浅拷贝的问题
+
+写时拷贝：本质上就是延迟拷贝
+
+kmp bm算法
+
+
+
+
+
+vector
+
+vector可以用迭代器初始化
+
+vector<char>(s.begin().s.end())  s是string  通过模板实现
+
+[]回去检查下标合法性
+
+assign接口可以传数组  左闭右开[)
+
+sort(v.begin(),v.end(),greater<int>());排降序 与仿函数有关
+
+
+
+
+
+模板不支持定义和声明分离
+
+erase()会返回删除的下一个位置
+
+
+
+迭代器失效
+
+解决：不要去访问它
+
+
+
+浅拷贝危害：析构两次 或者一个影响另一个
+
+
+
+现代写法：在传参时做好了拷贝  利用了形参是实参的临时拷贝
