模拟实现map和set笔记

--- a/map and set/2022_5_6_模拟实现map和set.md
+++ b/map and set/2022_5_6_模拟实现map和set.md
@@ -1,37 +1,277 @@
-![image-20220506164515992](https://pic-1304888003.cos.ap-guangzhou.myqcloud.com/img/image-20220506164515992.png)
+# 一棵红黑树封装出map和set
 
-为什么需要第一个模板参数K？
+> 红黑树的模拟实现👉👉[ 传送门_](https://blog.csdn.net/m0_53005929/article/details/124597152?spm=1001.2014.3001.5501)
 
-find函数需要
+## 问题
 
-为什么需要第二个模板参数pair<const K,v>/K?
+用同一棵红黑树模拟实现map和set的实现过程主要有以下几个问题
 
-知道是啥类型  但是得知道比较的时候怎么用，比如我知道是pair，传过来也是pair，但这个类比较又不知道这是pair得取出first比较，pair这个类型重载的大于小于，但是不是我们需要的
+1. map的元素是key-value键值对，而set的元素仅仅是key，怎么去用同一棵树封装？
+2. 怎么实现这棵树的迭代器？
+3. 底层的红黑树也是二叉搜索树，构建二叉搜索树的过程中需要比较，而两个容器的元素类型不同，怎么拿出key-value的key进行比较？
 
-为什么需要第三个参数
+自己碰到的一些小细节
 
-运用第三个参数是为了解决第二个问题，通过仿函数声明一个对象A，A里再传这个数据的类型，仿函数是写在map和set里的，map和set是知道确定的类型的，再通过仿函数直接处理返回要比较的值即可
+- pair直接赋值报错：尝试引用已删除的函数[C++Error2208:...尝试引用已删除的函数 - 余生以学 - 博客园](https://www.cnblogs.com/2018shawn/p/11819164.html)
+- 很多参数没加const修饰，传入的参数却带有const属性，这种情况的报错信息并不会显示和const相关，又因为是语法问题编译不通过，故无法调试（所以处理起来较为麻烦）
+
+## 解决
+
+### 问题一
+
+map的元素是key-value键值对，而set的元素仅仅是key，怎么去用同一棵树封装？
+
+<font color=blue>解决</font>：加一个模板参数（下图中RBTree的第二个参数T）
+
+使用：set实例化红黑树时传入Key，map实例化红黑树时传入KV键值对即可
+
+![image-20220509084521636](https://pic-1304888003.cos.ap-guangzhou.myqcloud.com/img/image-20220509084521636.png)
+
+### 问题二
+
+怎么实现这棵树的迭代器？
+
+> 下面Node表示树的结点
+
+迭代器要去遍历所有元素，还能访问元素的具体内容，类型肯定是Node*(指向树的结点的指针)。
+
+Node的存储不是连续的，不能直接++，也不能直接解引用拿到里面的数据，所以需要重载，所以这里实现迭代器得把Node*封装成一个对象。
+
+此外，vector的迭代器++就是下标+1找到下一个元素，list通过next指针找到下一个结点，那**红黑树的迭代器++要找到下一个结点，那怎么实现**？
+
+- 下一个结点指的是什么?
+
+以整数321456789去构建红黑树，1的下一个就是2,2的下一个就是3。
+
+- 如何实现？
+
+转化一下问题，在一棵二叉搜索树中怎么找到中序遍历的下一个结点？
+
+当前结点记为cur
+
+```mermaid
+graph LR
+I(看右子树)-->A(右子树不为空)
+I-->C
+A-->B(访问右子树最左边的结点)
+C(右子树为空)-->D(看父亲)
+D--在父亲的左边-->E(访问父亲)
+D--在父亲的右边-->F(往上递归)--cur=cur->parent-->D
+```
+
+> 找上一个结点则相反
+
+#### 代码实现
+
+- 为什么传三个模板参数？
+
+区分const迭代器和普通迭代器
+
+```c++
+传模板参数时普通迭代器传T&，const迭代器传const T&,同理普通迭代器Ptr传T*，const迭代器传const T*,如果不这么做，这里实现一个普通版本的迭代器，还得再写一个类单独实现const迭代器，重复的代码会比较多
+```
+
+![image-20220509100143531](https://pic-1304888003.cos.ap-guangzhou.myqcloud.com/img/image-20220509100143531.png)
+
+```c++
+template<class T,class Ref,class Ptr>
+//和链表一样的用法，目的是为了区分const迭代器和普通迭代器
+struct RBTreeIterator
+{
+	typedef RBTreeNode<T> Node;
+	typedef RBTreeIterator<T, Ref, Ptr> self;
+	Node* _node;//结点指针
+	RBTreeIterator(Node* node=nullptr)//全缺省
+		:_node(node)
+	{}
+
+	//const T& operator*()
+	// T& operator*() 通过模板的第二个参数简化
+	Ref operator*()
+	{
+		return _node->_data;
+	}
+	Ptr operator->()
+	{
+		return &(_node->_data);
+	}
+	self& operator++()//前置++
+	{
+		Node* cur = _node;
+		if (cur->_right)
+		{
+			//右子树不为空,不能直接把右子树的根给_node
+			//因为右子树最左边的叶子才是下一个应该访问的结点
+			Node* right = cur->_right;
+			while (right&&right->_left)
+			{
+				right = right->_left;
+			}
+			_node = right;
+			return *this;
+		}
+		else//右子树为空
+			//看父亲
+		{
+			Node* parent = cur->_parent;
+			while (parent&&parent->_right == cur)
+			{
+				cur = parent;
+				parent = cur->_parent;
+			}
+			if (parent == nullptr)
+			{
+				_node = nullptr;
+			}
+			else
+			{
+				_node = parent;
+			}
+			
+			return *this;
+		}
+	}
+	self& operator--()
+	{
+		//前置--
+		/*	左子树为空往上面去找
+			看父亲cur是父亲的右边直接访问父亲
+			cur是父亲的左边代表这颗子树访
+			问完毕，往上递归
+			左子树不为空访问左子树最右边的结点
+		*/
+		Node* cur = _node;
+		if (cur->_left)//左子树不为空
+		{
+			Node* left = cur->_left;//左子树 取名改成subRight好一点
+			while (left&&left->_right)
+			{
+				left = left->_right;
+			}
+			_node = left;
+		}
+		else//左子树为空
+		{
+			Node* parent = cur->_parent;
+			while (parent&&parent->_left==cur)
+			{
+				cur = parent;
+				parent = cur->_parent;
+			}
+
+			_node = parent;
+		}
+		return *this;
+	}
+	self operator++(int)
+	{
+		Node* tmp = _node;
+		++(*this);
+		return self(tmp);
+	}
+	self operator--(int)
+	{
+		Node* tmp = _node;
+		--(*this);
+		return self(tmp);
+	}
+	bool operator==(const self& s)const 
+	{
+		return _node == s._node;//注意这里的s是个对象 不是对象指针
+	}
+	bool operator!=(const self& s) const
+	{
+		return _node != s._node;
+	}
+};
+```
+
+### 问题三
+
+set比较时拿到key，map比较时从pair里拿到key?
+
+利用模板+仿函数，即下面的第三个参数
+
+```c++
+template<class K,class T,class KeyOfT>
+```
+
+![image-20220509100555525](https://pic-1304888003.cos.ap-guangzhou.myqcloud.com/img/image-20220509100555525.png)
+
+仿函数的使用
+
+![image-20220509100657894](https://pic-1304888003.cos.ap-guangzhou.myqcloud.com/img/image-20220509100657894.png)
+
+> 随笔记录：为什么需要第三个参数?
+>
+> 第三个参数是为了解决第二个参数带来的问题，第二个参数能让红黑树去适配key和key-value，但是因此红黑树也不知道传进来的是什么类型，也就无法进行比较，就得通过仿函数，仿函数是写在map和set里的，map和set是知道确定的类型的，再通过仿函数返回一个要比较的值即可
+>
+> 为什么需要第一个模板参数K？
+>
+> find函数需要
+>
+
+### 细节
+
+- 
+
+```c++
+typedef  typename  RBTree<K, K, setKeyOfT>::iterator iterator;
+```
+
+必须加typename告诉编译器后面这一堆是个类型，不然编译器不知道后面的这个是静态成员还是类型
+
+> 不加typename报错
+>
+> ![image-20220509102517489](https://pic-1304888003.cos.ap-guangzhou.myqcloud.com/img/image-20220509102517489.png)
+>
+> [C++typename的由来和用法 ](https://zhuanlan.zhihu.com/p/335777990)
+
+- delete会将对象的这块空间完全释放，但是对象里面开的空间则需要析构函数
+
+  > 具体表现为delete后原属于对象的空间全部变成随机值，就算析构函数里把成员变量置空也仍然会是随机值，因为析构函数是针对对象内部开的空间不针对对象自身的这块空间，对象自身空间的释放由delete完成了
+
+- const pair<K,V>& kv;修饰的引用，意义为不能通过引用来修改kv的值
+
+- 有些参数可以传常量时千万别用变量接收！
+
+- map里的pair<const K,T>  注意K具有const属性
+
+  > ![image-20220509103617973](https://pic-1304888003.cos.ap-guangzhou.myqcloud.com/img/image-20220509103617973.png)
+
+- map和set插入的返回值是pair<iterator, bool>，通过这个返回值既可以找到插入的元素，还可以知道插入是否成功
+
+- map重载的[]很实用，具体实现是先插入，根据插入的返回值拿到value
+
+  ```c++
+  V& operator[](const K& key)
+  {
+  	pair<iterator, bool> ret = insert(make_pair(key,V()));
+  	return (ret.first)->second;
+  }
+  ```
+
+## 总结
+
+- 红黑树的封装从另一个角度看就是模板的应用
+
+- 迭代器也没那么神奇，本质上也就是一个类
+
+[代码汇总--github](https://github.com/CCLCK/CPP_STL/tree/main/map and set)
+
+## 闲谈
+
+至此模拟实现STL就告一段落了
+
+模拟实现STL代码汇总：[CCLCK/CPP_STL: STL库笔记 (github.com)](https://github.com/CCLCK/CPP_STL)
 
 
 
 
 
-二叉搜索树 非递归找中序的下一个
 
-右子树为空吗？  右子树不为空 去访问右子树的最左边的结点
 
-右子树为空？ 找父亲 是父亲的左孩子 直接访问父亲，如果是父亲的右，说明父亲已经访问过，去找父亲的父亲
 
-delete会将对象的这块空间完全释放 但是对象里面开的空间则需要构造函数
 
-Ptr Ref是为了区分const和普通迭代器
 
-[C++Error2208:...尝试引用已删除的函数 - 余生以学 - 博客园 (cnblogs.com)](https://www.cnblogs.com/2018shawn/p/11819164.html)
 
-const pair<K,V>& kv;修饰的引用  意义为不能通过引用来修改kv的值
-
-今天最大的收获就是有些参数可以传常量时千万别用变量接收 改bug能改死人
-
-还有一个就是知道C的函数的实现还是重要的 今天要不是知道函数memcpy是逐字节拷贝 都不好改
-
-![image-20220507224710109](https://pic-1304888003.cos.ap-guangzhou.myqcloud.com/img/image-20220507224710109.png)
